--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^4.0.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
+    "modern-normalize": "^1.1.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
